--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,16 +2,20 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@id/menuID"
-          android:title="@string/test"
-          app:showAsAction="always" />
+          android:icon="@drawable/ic_thumb_up"
+          app:showAsAction="always"
+          android:title="@string/til_neste_aktivitet"
+          android:onClick="tilRegistrer"/>
+
     <item android:id="@id/menuID2"
-        android:title="@string/test"
-        app:showAsAction="always" />
+        android:icon="@drawable/ic_action_coffee"
+        app:showAsAction="always"
+        android:title="@string/denne_knappen_gj_r_ikke_noe" />
     <item android:id="@id/menuID3"
-        android:title="@string/test"
+        android:title="@string/dette_er_en_option"
         app:showAsAction="ifRoom" />
     <item android:id="@id/menuID4"
-        android:title="@string/test"
+        android:title="@string/dette_ogs"
         app:showAsAction="ifRoom" />
 
 </menu>
